# prmt

./: .gitignore  CONFIG.yaml  LICENSE  MANIFEST.in  Pipfile  Project  README.md  build.py  make.py  publish.py  pyproject.toml  requirements.txt  setup.py
prmt/: __init__.py
tests/: __main__.py
